MDEV-21029 Incorrect result for expression with the <=> operator and IS NULL

Item_func_equal erroneously derived is_null() from the parent class.
Overriding it to return false because <=> can never return NULL.